src/pingball/parser/BoardParser.java
// Generated from src/pingball/parser/Board.g4 by ANTLR 4.0

package pingball.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BoardParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, WHITESPACE=2, STRING_BOARD=3, STRING_BALL=4, STRING_SQUAREBUMPER=5, 
		STRING_TRIANGLEBUMPER=6, STRING_CIRCLEBUMPER=7, STRING_LEFTFLIPPER=8, 
		STRING_RIGHTFLIPPER=9, STRING_ABSORBER=10, STRING_PORTAL=11, STRING_FIRE=12, 
		STRING_KEYDOWN=13, STRING_KEYUP=14, STRING_NAME=15, STRING_GRAVITY=16, 
		STRING_FRICTION1=17, STRING_FRICTION2=18, STRING_WIDTH=19, STRING_HEIGHT=20, 
		STRING_TRIGGER=21, STRING_ACTION=22, STRING_ORIENTATION=23, STRING_XVELOCITY=24, 
		STRING_YVELOCITY=25, STRING_X=26, STRING_Y=27, STRING_KEY=28, STRING_OTHERBOARD=29, 
		STRING_OTHERPORTAL=30, EQUALS=31, NUMBER=32, NAME=33;
	public static final String[] tokenNames = {
		"<INVALID>", "COMMENT", "WHITESPACE", "'board'", "'ball'", "'squareBumper'", 
		"'triangleBumper'", "'circleBumper'", "'leftFlipper'", "'rightFlipper'", 
		"'absorber'", "'portal'", "'fire'", "'keydown'", "'keyup'", "'name'", 
		"'gravity'", "'friction1'", "'friction2'", "'width'", "'height'", "'trigger'", 
		"'action'", "'orientation'", "'xVelocity'", "'yVelocity'", "'x'", "'y'", 
		"'key'", "'otherBoard'", "'otherPortal'", "'='", "NUMBER", "NAME"
	};
	public static final int
		RULE_board = 0, RULE_objectLine = 1, RULE_boardObjectLine = 2, RULE_ballObjectLine = 3, 
		RULE_squareBumperObjectLine = 4, RULE_triangleBumperObjectLine = 5, RULE_circleBumperObjectLine = 6, 
		RULE_leftFlipperObjectLine = 7, RULE_rightFlipperObjectLine = 8, RULE_absorberObjectLine = 9, 
		RULE_fireObjectLine = 10, RULE_keydownObjectLine = 11, RULE_keyupObjectLine = 12, 
		RULE_portalObjectLine = 13, RULE_boardAttributes = 14, RULE_ballAttributes = 15, 
		RULE_squareBumperAttributes = 16, RULE_triangleBumperAttributes = 17, 
		RULE_circleBumperAttributes = 18, RULE_leftFlipperAttributes = 19, RULE_rightFlipperAttributes = 20, 
		RULE_absorberAttributes = 21, RULE_fireAttributes = 22, RULE_keydownAttributes = 23, 
		RULE_keyupAttributes = 24, RULE_portalAttributes = 25, RULE_attributeName = 26, 
		RULE_attributeGravity = 27, RULE_attributeFriction1 = 28, RULE_attributeFriction2 = 29, 
		RULE_attributeX = 30, RULE_attributeY = 31, RULE_attributeXVelocity = 32, 
		RULE_attributeYVelocity = 33, RULE_attributeOrientation = 34, RULE_attributeTrigger = 35, 
		RULE_attributeAction = 36, RULE_attributeWidth = 37, RULE_attributeHeight = 38, 
		RULE_attributeKey = 39, RULE_attributeOtherboard = 40, RULE_attributeOtherportal = 41;
	public static final String[] ruleNames = {
		"board", "objectLine", "boardObjectLine", "ballObjectLine", "squareBumperObjectLine", 
		"triangleBumperObjectLine", "circleBumperObjectLine", "leftFlipperObjectLine", 
		"rightFlipperObjectLine", "absorberObjectLine", "fireObjectLine", "keydownObjectLine", 
		"keyupObjectLine", "portalObjectLine", "boardAttributes", "ballAttributes", 
		"squareBumperAttributes", "triangleBumperAttributes", "circleBumperAttributes", 
		"leftFlipperAttributes", "rightFlipperAttributes", "absorberAttributes", 
		"fireAttributes", "keydownAttributes", "keyupAttributes", "portalAttributes", 
		"attributeName", "attributeGravity", "attributeFriction1", "attributeFriction2", 
		"attributeX", "attributeY", "attributeXVelocity", "attributeYVelocity", 
		"attributeOrientation", "attributeTrigger", "attributeAction", "attributeWidth", 
		"attributeHeight", "attributeKey", "attributeOtherboard", "attributeOtherportal"
	};

	@Override
	public String getGrammarFileName() { return "Board.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }


	    /**
	     * Call this method to have the lexer or parser throw a RuntimeException if
	     * it encounters an error.
	     */
	    public void reportErrorsAsExceptions() {
	        addErrorListener(new ExceptionThrowingErrorListener());
	    }
	    
	    private static class ExceptionThrowingErrorListener extends BaseErrorListener {
	        @Override
	        public void syntaxError(Recognizer<?, ?> recognizer,
	                Object offendingSymbol, int line, int charPositionInLine,
	                String msg, RecognitionException e) {
	            throw new RuntimeException(msg);
	        }
	    }

	public BoardParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class BoardContext extends ParserRuleContext {
		public List<ObjectLineContext> objectLine() {
			return getRuleContexts(ObjectLineContext.class);
		}
		public TerminalNode EOF() { return getToken(BoardParser.EOF, 0); }
		public ObjectLineContext objectLine(int i) {
			return getRuleContext(ObjectLineContext.class,i);
		}
		public BoardContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_board; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterBoard(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitBoard(this);
		}
	}

	public final BoardContext board() throws RecognitionException {
		BoardContext _localctx = new BoardContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_board);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(84); objectLine();
				}
				}
				setState(87); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING_BOARD) | (1L << STRING_BALL) | (1L << STRING_SQUAREBUMPER) | (1L << STRING_TRIANGLEBUMPER) | (1L << STRING_CIRCLEBUMPER) | (1L << STRING_LEFTFLIPPER) | (1L << STRING_RIGHTFLIPPER) | (1L << STRING_ABSORBER) | (1L << STRING_PORTAL) | (1L << STRING_FIRE) | (1L << STRING_KEYDOWN) | (1L << STRING_KEYUP))) != 0) );
			setState(89); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectLineContext extends ParserRuleContext {
		public LeftFlipperObjectLineContext leftFlipperObjectLine() {
			return getRuleContext(LeftFlipperObjectLineContext.class,0);
		}
		public CircleBumperObjectLineContext circleBumperObjectLine() {
			return getRuleContext(CircleBumperObjectLineContext.class,0);
		}
		public SquareBumperObjectLineContext squareBumperObjectLine() {
			return getRuleContext(SquareBumperObjectLineContext.class,0);
		}
		public AbsorberObjectLineContext absorberObjectLine() {
			return getRuleContext(AbsorberObjectLineContext.class,0);
		}
		public RightFlipperObjectLineContext rightFlipperObjectLine() {
			return getRuleContext(RightFlipperObjectLineContext.class,0);
		}
		public FireObjectLineContext fireObjectLine() {
			return getRuleContext(FireObjectLineContext.class,0);
		}
		public KeyupObjectLineContext keyupObjectLine() {
			return getRuleContext(KeyupObjectLineContext.class,0);
		}
		public BallObjectLineContext ballObjectLine() {
			return getRuleContext(BallObjectLineContext.class,0);
		}
		public KeydownObjectLineContext keydownObjectLine() {
			return getRuleContext(KeydownObjectLineContext.class,0);
		}
		public BoardObjectLineContext boardObjectLine() {
			return getRuleContext(BoardObjectLineContext.class,0);
		}
		public PortalObjectLineContext portalObjectLine() {
			return getRuleContext(PortalObjectLineContext.class,0);
		}
		public TriangleBumperObjectLineContext triangleBumperObjectLine() {
			return getRuleContext(TriangleBumperObjectLineContext.class,0);
		}
		public ObjectLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterObjectLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitObjectLine(this);
		}
	}

	public final ObjectLineContext objectLine() throws RecognitionException {
		ObjectLineContext _localctx = new ObjectLineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_objectLine);
		try {
			setState(103);
			switch (_input.LA(1)) {
			case STRING_BOARD:
				enterOuterAlt(_localctx, 1);
				{
				setState(91); boardObjectLine();
				}
				break;
			case STRING_BALL:
				enterOuterAlt(_localctx, 2);
				{
				setState(92); ballObjectLine();
				}
				break;
			case STRING_SQUAREBUMPER:
				enterOuterAlt(_localctx, 3);
				{
				setState(93); squareBumperObjectLine();
				}
				break;
			case STRING_TRIANGLEBUMPER:
				enterOuterAlt(_localctx, 4);
				{
				setState(94); triangleBumperObjectLine();
				}
				break;
			case STRING_CIRCLEBUMPER:
				enterOuterAlt(_localctx, 5);
				{
				setState(95); circleBumperObjectLine();
				}
				break;
			case STRING_LEFTFLIPPER:
				enterOuterAlt(_localctx, 6);
				{
				setState(96); leftFlipperObjectLine();
				}
				break;
			case STRING_RIGHTFLIPPER:
				enterOuterAlt(_localctx, 7);
				{
				setState(97); rightFlipperObjectLine();
				}
				break;
			case STRING_ABSORBER:
				enterOuterAlt(_localctx, 8);
				{
				setState(98); absorberObjectLine();
				}
				break;
			case STRING_FIRE:
				enterOuterAlt(_localctx, 9);
				{
				setState(99); fireObjectLine();
				}
				break;
			case STRING_KEYUP:
				enterOuterAlt(_localctx, 10);
				{
				setState(100); keyupObjectLine();
				}
				break;
			case STRING_KEYDOWN:
				enterOuterAlt(_localctx, 11);
				{
				setState(101); keydownObjectLine();
				}
				break;
			case STRING_PORTAL:
				enterOuterAlt(_localctx, 12);
				{
				setState(102); portalObjectLine();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoardObjectLineContext extends ParserRuleContext {
		public BoardAttributesContext boardAttributes(int i) {
			return getRuleContext(BoardAttributesContext.class,i);
		}
		public List<BoardAttributesContext> boardAttributes() {
			return getRuleContexts(BoardAttributesContext.class);
		}
		public TerminalNode STRING_BOARD() { return getToken(BoardParser.STRING_BOARD, 0); }
		public BoardObjectLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boardObjectLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterBoardObjectLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitBoardObjectLine(this);
		}
	}

	public final BoardObjectLineContext boardObjectLine() throws RecognitionException {
		BoardObjectLineContext _localctx = new BoardObjectLineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_boardObjectLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105); match(STRING_BOARD);
			setState(107); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(106); boardAttributes();
				}
				}
				setState(109); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING_NAME) | (1L << STRING_GRAVITY) | (1L << STRING_FRICTION1) | (1L << STRING_FRICTION2))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BallObjectLineContext extends ParserRuleContext {
		public BallAttributesContext ballAttributes(int i) {
			return getRuleContext(BallAttributesContext.class,i);
		}
		public TerminalNode STRING_BALL() { return getToken(BoardParser.STRING_BALL, 0); }
		public List<BallAttributesContext> ballAttributes() {
			return getRuleContexts(BallAttributesContext.class);
		}
		public BallObjectLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ballObjectLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterBallObjectLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitBallObjectLine(this);
		}
	}

	public final BallObjectLineContext ballObjectLine() throws RecognitionException {
		BallObjectLineContext _localctx = new BallObjectLineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ballObjectLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111); match(STRING_BALL);
			setState(113); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(112); ballAttributes();
				}
				}
				setState(115); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING_NAME) | (1L << STRING_XVELOCITY) | (1L << STRING_YVELOCITY) | (1L << STRING_X) | (1L << STRING_Y))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SquareBumperObjectLineContext extends ParserRuleContext {
		public SquareBumperAttributesContext squareBumperAttributes(int i) {
			return getRuleContext(SquareBumperAttributesContext.class,i);
		}
		public TerminalNode STRING_SQUAREBUMPER() { return getToken(BoardParser.STRING_SQUAREBUMPER, 0); }
		public List<SquareBumperAttributesContext> squareBumperAttributes() {
			return getRuleContexts(SquareBumperAttributesContext.class);
		}
		public SquareBumperObjectLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_squareBumperObjectLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterSquareBumperObjectLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitSquareBumperObjectLine(this);
		}
	}

	public final SquareBumperObjectLineContext squareBumperObjectLine() throws RecognitionException {
		SquareBumperObjectLineContext _localctx = new SquareBumperObjectLineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_squareBumperObjectLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); match(STRING_SQUAREBUMPER);
			setState(119); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(118); squareBumperAttributes();
				}
				}
				setState(121); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING_NAME) | (1L << STRING_X) | (1L << STRING_Y))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TriangleBumperObjectLineContext extends ParserRuleContext {
		public List<TriangleBumperAttributesContext> triangleBumperAttributes() {
			return getRuleContexts(TriangleBumperAttributesContext.class);
		}
		public TerminalNode STRING_TRIANGLEBUMPER() { return getToken(BoardParser.STRING_TRIANGLEBUMPER, 0); }
		public TriangleBumperAttributesContext triangleBumperAttributes(int i) {
			return getRuleContext(TriangleBumperAttributesContext.class,i);
		}
		public TriangleBumperObjectLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_triangleBumperObjectLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterTriangleBumperObjectLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitTriangleBumperObjectLine(this);
		}
	}

	public final TriangleBumperObjectLineContext triangleBumperObjectLine() throws RecognitionException {
		TriangleBumperObjectLineContext _localctx = new TriangleBumperObjectLineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_triangleBumperObjectLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123); match(STRING_TRIANGLEBUMPER);
			setState(125); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(124); triangleBumperAttributes();
				}
				}
				setState(127); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING_NAME) | (1L << STRING_ORIENTATION) | (1L << STRING_X) | (1L << STRING_Y))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CircleBumperObjectLineContext extends ParserRuleContext {
		public List<CircleBumperAttributesContext> circleBumperAttributes() {
			return getRuleContexts(CircleBumperAttributesContext.class);
		}
		public TerminalNode STRING_CIRCLEBUMPER() { return getToken(BoardParser.STRING_CIRCLEBUMPER, 0); }
		public CircleBumperAttributesContext circleBumperAttributes(int i) {
			return getRuleContext(CircleBumperAttributesContext.class,i);
		}
		public CircleBumperObjectLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_circleBumperObjectLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterCircleBumperObjectLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitCircleBumperObjectLine(this);
		}
	}

	public final CircleBumperObjectLineContext circleBumperObjectLine() throws RecognitionException {
		CircleBumperObjectLineContext _localctx = new CircleBumperObjectLineContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_circleBumperObjectLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129); match(STRING_CIRCLEBUMPER);
			setState(131); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(130); circleBumperAttributes();
				}
				}
				setState(133); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING_NAME) | (1L << STRING_X) | (1L << STRING_Y))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LeftFlipperObjectLineContext extends ParserRuleContext {
		public List<LeftFlipperAttributesContext> leftFlipperAttributes() {
			return getRuleContexts(LeftFlipperAttributesContext.class);
		}
		public LeftFlipperAttributesContext leftFlipperAttributes(int i) {
			return getRuleContext(LeftFlipperAttributesContext.class,i);
		}
		public TerminalNode STRING_LEFTFLIPPER() { return getToken(BoardParser.STRING_LEFTFLIPPER, 0); }
		public LeftFlipperObjectLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leftFlipperObjectLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterLeftFlipperObjectLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitLeftFlipperObjectLine(this);
		}
	}

	public final LeftFlipperObjectLineContext leftFlipperObjectLine() throws RecognitionException {
		LeftFlipperObjectLineContext _localctx = new LeftFlipperObjectLineContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_leftFlipperObjectLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135); match(STRING_LEFTFLIPPER);
			setState(137); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(136); leftFlipperAttributes();
				}
				}
				setState(139); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING_NAME) | (1L << STRING_ORIENTATION) | (1L << STRING_X) | (1L << STRING_Y))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RightFlipperObjectLineContext extends ParserRuleContext {
		public RightFlipperAttributesContext rightFlipperAttributes(int i) {
			return getRuleContext(RightFlipperAttributesContext.class,i);
		}
		public TerminalNode STRING_RIGHTFLIPPER() { return getToken(BoardParser.STRING_RIGHTFLIPPER, 0); }
		public List<RightFlipperAttributesContext> rightFlipperAttributes() {
			return getRuleContexts(RightFlipperAttributesContext.class);
		}
		public RightFlipperObjectLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rightFlipperObjectLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterRightFlipperObjectLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitRightFlipperObjectLine(this);
		}
	}

	public final RightFlipperObjectLineContext rightFlipperObjectLine() throws RecognitionException {
		RightFlipperObjectLineContext _localctx = new RightFlipperObjectLineContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_rightFlipperObjectLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141); match(STRING_RIGHTFLIPPER);
			setState(143); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(142); rightFlipperAttributes();
				}
				}
				setState(145); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING_NAME) | (1L << STRING_ORIENTATION) | (1L << STRING_X) | (1L << STRING_Y))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbsorberObjectLineContext extends ParserRuleContext {
		public AbsorberAttributesContext absorberAttributes(int i) {
			return getRuleContext(AbsorberAttributesContext.class,i);
		}
		public TerminalNode STRING_ABSORBER() { return getToken(BoardParser.STRING_ABSORBER, 0); }
		public List<AbsorberAttributesContext> absorberAttributes() {
			return getRuleContexts(AbsorberAttributesContext.class);
		}
		public AbsorberObjectLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_absorberObjectLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).enterAbsorberObjectLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardListener ) ((BoardListener)listener).exitAbsorberObjectLine(this);
		}
	}

	public final AbsorberObjectLineContext absorberObjectLine() throws RecognitionException {
		AbsorberObjectLineContext _localctx = new AbsorberObjectLineContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_absorberObjectLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147); match(STRING_ABSORBER);
			setState(149); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(148); absorberAttributes();
				}
				}
				setState(151); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING_NAME) | (1L << STRING_WIDTH) | (1L << STRING_HEIGHT) | (1L << STRING_X) | (1L << STRING_Y))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
